# hadiuka

./: README.md  pyproject.toml
.github/workflows/: tests.yml
hadiuka/: __init__.py  config.py  converter.py  mapping.json  runner.py  translator.py
tests/: test_hadiuka.py  апостроф.пай  спіраль.пай
